src/objects/CCAPI__c.object
<CustomObject>
    <description>ClearChoice API Keys</description>
    <fields>
        <fullName>Default_Call_Center_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A user id to be grafted onto api calls for lead inserts.  Doing this as a workaround now that sites users can not apparently query the users table.</description>
        <label>Default Call Center Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CCAPI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <description>Who the API belongs to</description>
        <label>User</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>access_key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>APIKEY to access CCAPI</description>
        <label>access_key</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>CCAPI</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>API</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCAPI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>